[package]
name = "miniwin"
version = "0.1.0"
authors = ["SLIMPANDA\\janio <jani.peltonen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true 
codegen-units = 1    # should be 1, test diff
opt-level = "z"       # is this highest  
panic = 'abort'

[dependencies]
#[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser", "libloaderapi" ] }
